--- a/LuggageTrackerTool2/src/view/RegistrationLuggage.form
+++ b/LuggageTrackerTool2/src/view/RegistrationLuggage.form
@@ -40,11 +40,9 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="STORAGE_LOCATION" min="-2" max="-2" attributes="0"/>
                           <Component id="DESCRIPTION" min="-2" max="-2" attributes="0"/>
-                          <Component id="LUGGAGE_ID" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="LUGGAGE_ID_INPUT" max="32767" attributes="0"/>
                           <Component id="DESCRIPTION_INPUT_FRAME" pref="309" max="32767" attributes="0"/>
                           <Component id="STORAGE_LOCATION_INPUT" alignment="0" max="32767" attributes="0"/>
                       </Group>
@@ -52,32 +50,24 @@
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="PRINT_ON_REGISTER_INPUT" min="-2" max="-2" attributes="0"/>
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
-                              <Component id="ANDERS" min="-2" max="-2" attributes="0"/>
-                          </Group>
+                          <Component id="ANDERS" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="ANDERS_INPUT_FRAME" pref="307" max="32767" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="48" max="32767" attributes="0"/>
+              <EmptySpace pref="36" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="LUGGAGE_ID" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="LUGGAGE_ID_INPUT" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Group type="102" attributes="0">
-                      <Component id="DESCRIPTION_INPUT_FRAME" min="-2" pref="61" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="DESCRIPTION_INPUT_FRAME" min="-2" pref="55" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="STORAGE_LOCATION_INPUT" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
@@ -86,26 +76,19 @@
                       <Component id="STORAGE_LOCATION" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="ANDERS_INPUT_FRAME" min="-2" pref="77" max="-2" attributes="0"/>
+                  <Component id="ANDERS_INPUT_FRAME" min="-2" pref="40" max="-2" attributes="0"/>
                   <Component id="ANDERS" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="PRINT_ON_REGISTER_INPUT" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JLabel" name="LUGGAGE_ID">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Luggage ID"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="LUGGAGE_ID_INPUT">
-    </Component>
     <Component class="javax.swing.JLabel" name="DESCRIPTION">
       <Properties>
         <Property name="text" type="java.lang.String" value="Description"/>
@@ -122,6 +105,7 @@
           <Properties>
             <Property name="columns" type="int" value="20"/>
             <Property name="rows" type="int" value="5"/>
+            <Property name="text" type="java.lang.String" value="asd&#xa;asd&#xa;asd"/>
           </Properties>
         </Component>
       </SubComponents>
