--- a/LuggageTrackerTool2/src/view/RegistrationPassenger.form
+++ b/LuggageTrackerTool2/src/view/RegistrationPassenger.form
@@ -31,7 +31,7 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -45,7 +45,6 @@
                                       <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Component id="NAME" min="-2" max="-2" attributes="0"/>
-                                          <Component id="ID" min="-2" max="-2" attributes="0"/>
                                           <Component id="SURNAME" min="-2" max="-2" attributes="0"/>
                                           <Component id="DATE_OF_BIRTH" min="-2" max="-2" attributes="0"/>
                                           <Component id="GENDER" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -75,7 +74,6 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="PAIR_PASSENGER_LUGGAGE" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="REGISTER" min="-2" max="-2" attributes="0"/>
-                          <Component id="TEMP_COUNTRY_INPUT" min="-2" pref="259" max="-2" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="DATE_OF_BIRTH_DD_INPUT" min="-2" pref="27" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -98,7 +96,6 @@
                           <Component id="HOME_ADDRESS_TITLE" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="94" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="ID_INPUT" alignment="0" max="32767" attributes="0"/>
                               <Component id="NAME_INPUT" alignment="0" max="32767" attributes="0"/>
                               <Group type="102" alignment="1" attributes="0">
                                   <Component id="SURNAME_TUSSENVOEGSEL_INPUT" min="-2" pref="72" max="-2" attributes="0"/>
@@ -117,8 +114,12 @@
                           </Group>
                       </Group>
                   </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="189" max="-2" attributes="0"/>
+                      <Component id="TEMP_COUNTRY_INPUT" min="-2" pref="259" max="-2" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace pref="32" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -130,11 +131,6 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
                   <Group type="102" attributes="0">
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="ID" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="ID_INPUT" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="NAME" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="NAME_INPUT" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -148,7 +144,6 @@
                       <Component id="SURNAME_INPUT" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="DATE_OF_BIRTH" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="DATE_OF_BIRTH_DD_INPUT" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -171,9 +166,9 @@
                   <Component id="MOBILE_PHONE_NUMBER" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="MOBILE_PHONE_NUMBER_INPUT" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="HOME_ADDRESS_TITLE" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Component id="HOME_ADDRESS_TITLE" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="HOME_COUNTRY" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="HOME_COUNTRY_INPUT" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -193,9 +188,9 @@
                   <Component id="HOME_POSTAL_CODE" min="-2" max="-2" attributes="0"/>
                   <Component id="HOME_POSTAL_CODE_INPUT" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="TEMPORARY_ADDRESS_TITLE" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Component id="TEMPORARY_ADDRESS_TITLE" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="TEMP_COUNTRY" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="TEMP_COUNTRY_INPUT" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -215,9 +210,9 @@
                   <Component id="TEMP_POSTAL_CODE" min="-2" max="-2" attributes="0"/>
                   <Component id="TEMP_POSTAL_CODE_INPUT" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="ADDITIONAL_OPTIONS_TITLE" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Component id="ADDITIONAL_OPTIONS_TITLE" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="PRINT_ON_REGISTER" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="PAIR_PASSENGER_LUGGAGE" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -227,7 +222,7 @@
                   <Component id="PRINT" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="REGISTER" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -240,13 +235,6 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Basic Information"/>
       </Properties>
-    </Component>
-    <Component class="javax.swing.JLabel" name="ID">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="ID"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="ID_INPUT">
     </Component>
     <Component class="javax.swing.JLabel" name="NAME">
       <Properties>
@@ -440,6 +428,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Register"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="REGISTERActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
